deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ta-app
  name: ta-service
  labels:
    app: ta
    version: v1
spec:
  type: ClusterIP
  selector:
    app: ta
    version: v1
  ports:
   - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ta-app
  name: ta-deployment
  labels:
    app: ta
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ta
      version: v1
  template:
    metadata:
      labels:
        app: ta
        version: v1
    spec:
      containers:
        - name: nginx
          image: yuanshanbang/nginx-one:v1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: confd
              mountPath: /etc/nginx/conf.d
            - name: www
              mountPath: /app/web
            - name: logs
              mountPath: /var/log/nginx
        - name: fpm
          image: yuanshanbang/yii2-php:7.3-fpm
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: www2
              mountPath: /app/web
      volumes:
        - name: confd
          hostPath:
            path: /home/wwwroot/k8s-ta/nginx/conf.d
        - name: www
          hostPath:
            path: /home/wwwroot
        - name: www2
          hostPath:
            path: /home/wwwroot
        - name: logs
          hostPath:
            path: /home/wwwroot/k8s-ta/nginx/logs
        - name: ini
          hostPath:
            path: /home/wwwroot/k8s-ta/fpm/php.ini
        - name: fpmd
          hostPath:
            path: /home/wwwroot/k8s-ta/fpm/php-fpm.d
