ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ta-app
  name: ta-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ta.jrit.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ta-service
                port:
                  number: 8888
